--- a/butter-blitz-2022/graphics/4x3_1p.html
+++ b/butter-blitz-2022/graphics/4x3_1p.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="UTF-8">
-	  
-      <!-- CSS -->
-      <link rel="stylesheet" href="css/common.css" />
-      <link rel="stylesheet" href="css/4x3_1p.css" />
-      <style>
-         body {
+
+<head>
+   <meta charset="UTF-8">
+
+   <!-- CSS -->
+   <link rel="stylesheet" href="css/common.css" />
+   <link rel="stylesheet" href="css/4x3_1p.css" />
+   <style>
+      body {
          background: url('img/layouts/4x3_1p.png') no-repeat;
-         }
-      </style>
-	  
-      <!-- JavaScript -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="js/layouts/game-layout.js"></script>
-      <script src="js/utils.js"></script>
-      <script src="js/timer.js"></script>
-      <script src="js/sponsors.js"></script>
-   </head>
-   <body>
-   
-      <!-- Runner details -->
-      <div class="runner-container" id="runner-container1">
-         <div class="runner-name" id="runner-name1"></div>
-         <div class="pronouns" id="pronouns1"></div>
+      }
+   </style>
+
+   <!-- JavaScript -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="js/layouts/game-layout.js"></script>
+   <script src="js/utils.js"></script>
+   <script src="js/timer.js"></script>
+   <script src="js/sponsors.js"></script>
+</head>
+
+<body>
+
+   <!-- Runner details -->
+   <div class="runner-container info-box" id="runner-container1">
+      <div class="runner-name" id="runner-name1"></div>
+      <div class="pronouns" id="pronouns1"></div>
+   </div>
+
+   <!-- Game info -->
+   <div id="info-container" class="flex-col">
+      <div id="game-container" class="info-box mar-b">
+         <div id="game-name"></div>
       </div>
-	  
-      <!-- Game details -->
-      <div id="game-name"></div>
-	  
-      <!-- Game info -->
-      <div id="info-container">
+      <!-- <div id="game-info" class="info-box"></div> -->
+      <div class="info-box mar-b">
          <div id="category"></div>
-         <div id="estimate-container">
-            <div id="estimate-label">
-               <img src="img/common/timer.svg" />
-            </div>
+      </div>
+      <div class="flex-row mar-b">
+         <div class="info-box mar-r" style="flex: 2">
+            <div id="console">GBI / 2001</div>
+         </div>
+         <div class="info-box" style="flex: 1">
             <div id="estimate"></div>
          </div>
       </div>
-	  
-      <!-- Sponsor area -->
-      <div id="sponsor-container">
-         <img id="sponsor-img" />
-      </div>
-	  
       <!-- Timer -->
-      <div id="timer"></div>
-   </body>
+      <div id="timer" class="info-box"></div>
+   </div>
+
+
+   <!-- Sponsor area -->
+   <div id="sponsor-container">
+      <img id="sponsor-img" />
+   </div>
+
+
+</body>
+
 </html>
