More style updates

--- a/butter-blitz-2022/graphics/4x3_1p.html
+++ b/butter-blitz-2022/graphics/4x3_1p.html
@@ -25,7 +25,7 @@
 
    <!-- Runner details -->
    <div class="runner-container info-box" id="runner-container1">
-      <div class="runner-name" id="runner-name1"></div>
+      <div class="runner-name mar-r" id="runner-name1"></div>
       <div class="pronouns" id="pronouns1"></div>
    </div>
 
