--- a/butter-blitz-2022/graphics/MP_CGC.html
+++ b/butter-blitz-2022/graphics/MP_CGC.html
@@ -5,10 +5,10 @@
 	  
       <!-- CSS -->
       <link rel="stylesheet" href="css/common.css" />
-      <link rel="stylesheet" href="css/16x9_2p.css" />
+      <link rel="stylesheet" href="css/MP_CGC.css" />
       <style>
          body {
-         background: url('img/layouts/16x9_2p.png') no-repeat;
+         background: url('img/layouts/MP_CGC.png') no-repeat;
          }
       </style>
 	  
@@ -18,7 +18,7 @@
       <script src="js/utils.js"></script>
       <script src="js/timer.js"></script>
       <script src="js/medals.js"></script>
-      <script src="js/sponsors.js"></script>
+	  <script src="js/sponsors.js"></script>
    </head>
    
    <body>
@@ -39,12 +39,9 @@
             <div id="game-name"></div>
          </div>
          <!-- <div id="game-info" class="info-box"></div> -->
-         <div class="info-box mar-b">
-            <div id="category"></div>
-         </div>
          <div class="flex-row">
             <div class="info-box mar-r" style="flex: 2">
-               <div id="console">GBI / 2001</div>
+               <div id="category"></div>
             </div>
             <div class="info-box" style="flex: 1">
                <div id="estimate"></div>
