--- a/butter-blitz-2022/graphics/16x9_1p.html
+++ b/butter-blitz-2022/graphics/16x9_1p.html
@@ -38,7 +38,7 @@
          <!-- <div id="game-info" class="info-box"></div> -->
          <div class="flex-row">
             <div class="info-box mar-r" style="flex: 1">
-               <div id="console">GBI / 2001</div>
+               <div id="console"></div>
             </div>
             <div class="info-box mar-r" style="flex: 2">
                <div id="category"></div>
