--- a/butter-blitz-2022/graphics/4x3_2p.html
+++ b/butter-blitz-2022/graphics/4x3_2p.html
@@ -18,7 +18,6 @@
       <script src="js/utils.js"></script>
       <script src="js/timer.js"></script>
       <script src="js/medals.js"></script>
-	  <script src="js/sponsors.js"></script>
    </head>
    
    <body>
@@ -44,7 +43,7 @@
          </div>
          <div class="flex-row">
             <div class="info-box mar-r" style="flex: 2">
-               <div id="console">GBI / 2001</div>
+               <div id="console"></div>
             </div>
             <div class="info-box" style="flex: 1">
                <div id="estimate"></div>
