--- a/butter-blitz-2022/graphics/GBA.html
+++ b/butter-blitz-2022/graphics/GBA.html
@@ -38,7 +38,7 @@
          </div>
          <div class="flex-row mar-b">
             <div class="info-box mar-r" style="flex: 2">
-               <div id="console">GBI / 2001</div>
+               <div id="console"></div>
             </div>
             <div class="info-box" style="flex: 1">
                <div id="estimate"></div>
