--- a/butter-blitz-2022/graphics/Poke_Crystal_Rando.html
+++ b/butter-blitz-2022/graphics/Poke_Crystal_Rando.html
@@ -47,7 +47,7 @@
             <div id="category"></div>
          </div>
          <div class="info-box mar-b">
-            <div id="console">GBI / 2001</div>
+            <div id="console"></div>
          </div>
          <div class="info-box">
             <div id="estimate"></div>
