--- a/butter-blitz-2022/graphics/16x9_2p.html
+++ b/butter-blitz-2022/graphics/16x9_2p.html
@@ -44,7 +44,7 @@
          </div>
          <div class="flex-row">
             <div class="info-box mar-r" style="flex: 2">
-               <div id="console">GBI / 2001</div>
+               <div id="console"></div>
             </div>
             <div class="info-box" style="flex: 1">
                <div id="estimate"></div>
