--- a/butter-blitz-2022/graphics/DS.html
+++ b/butter-blitz-2022/graphics/DS.html
@@ -17,31 +17,37 @@
       <script src="js/layouts/game-layout.js"></script>
       <script src="js/utils.js"></script>
       <script src="js/timer.js"></script>
-      <script src="js/sponsors.js"></script>
    </head>
-   <body>
    
+   <body>
+
       <!-- Runner details -->
-      <div class="runner-container" id="runner-container1">
-         <div class="runner-name" id="runner-name1"></div>
+      <div class="runner-container info-box" id="runner-container1">
+         <div class="runner-name mar-r" id="runner-name1"></div>
          <div class="pronouns" id="pronouns1"></div>
       </div>
-	  
-      <!-- Game details -->
-      <div id="game-name"></div>
-	  
+   
       <!-- Game info -->
-      <div id="info-container">
-         <div id="category"></div>
-         <div id="estimate-container">
-            <div id="estimate-label">
-               <img src="img/common/timer.svg" />
-            </div>
-            <div id="estimate"></div>
+      <div id="info-container" class="flex-col">
+         <div id="game-container" class="info-box mar-b">
+            <div id="game-name"></div>
          </div>
+         <!-- <div id="game-info" class="info-box"></div> -->
+         <div class="info-box mar-b">
+            <div id="category"></div>
+         </div>
+         <div class="flex-row mar-b">
+            <div class="info-box mar-r" style="flex: 2">
+               <div id="console"></div>
+            </div>
+            <div class="info-box" style="flex: 1">
+               <div id="estimate"></div>
+            </div>
+         </div>
+         <!-- Timer -->
+         <div id="timer" class="info-box"></div>
       </div>
-	  
-      <!-- Timer -->
-      <div id="timer"></div>
+     
    </body>
+
 </html>
