--- a/butter-blitz-2022/graphics/Intermission.html
+++ b/butter-blitz-2022/graphics/Intermission.html
@@ -18,16 +18,31 @@
       <script src="./helpers/countUp.min.js"></script>
       <script src="./helpers/donation.js"></script>
       <script src="js/layouts/intermission.js"></script>
+      <script src="js/sponsors.js"></script>
+
    </head>
    <body>
    
 	  <!-- Host -->
-      <div id="host-container">
-         <span id="host"></span>
+      <div id="hostMusicContainer">
+         <div id="hostContainer">
+            <div id="host" class="mar-r"></div>
+            <div class="pronouns" id="hostPronouns"></div>
+         </div>
+         <div id="musicContainer" class="info-box">
+            <div id="musicLabel" class="mar-l mar-r">𝆕</div>
+            <div id="music" class="mar-r"></div>
+         </div>
       </div>
 	  
-	  <!-- Donation Total -->
-      <div id="donationTotal">
+      <!-- Donation Total -->
+      <div id="donationContainer">
+         <div id="donationTotal"></div>
+         <span id="charityText">Raised for the ACLU</span>
+         <!-- Sponsor area -->
+         <div id="sponsor-container">
+            <img id="sponsor-img" />
+         </div>
       </div>
 
       <!-- Upcoming Runs -->
@@ -54,7 +69,7 @@
          <!-- On Deck Runs -->
          <div id="on-deck-runs-container" class="flex-col">
             <!-- On Deck 1 -->
-            <div class="game-container info-box mar-b">
+            <div class="game-container info-box">
                <div id="on-deck-game1" class="on-deck-game"></div>
             </div>
             <div class="flex-row mar-b">
@@ -69,7 +84,7 @@
                </div>
             </div>
             <!-- On Deck 2 -->
-            <div class="game-container info-box mar-b">
+            <div class="game-container info-box">
                <div id="on-deck-game2" class="on-deck-game"></div>
             </div>
             <div class="flex-row mar-b">
@@ -84,7 +99,7 @@
                </div>
             </div>
             <!-- On Deck 3 -->
-            <div class="game-container info-box mar-b">
+            <div class="game-container info-box">
                <div id="on-deck-game3" class="on-deck-game"></div>
             </div>
             <div class="flex-row">
