--- a/butter-blitz-2022/graphics/Poke_Crystal_Rando.html
+++ b/butter-blitz-2022/graphics/Poke_Crystal_Rando.html
@@ -32,25 +32,22 @@
          <div class="runner-name mar-r" id="runner-name2"></div>
          <div class="pronouns" id="pronouns2"></div>
       </div>
-      <div class="runner-container info-box" id="runner-container3">
-         <div class="runner-name mar-r" id="runner-name3"></div>
-         <div class="pronouns" id="pronouns3"></div>
-      </div>
    
       <!-- Game info -->
       <div id="info-container" class="flex-col">
          <div id="game-container" class="info-box mar-b">
             <div id="game-name"></div>
          </div>
-         <!-- <div id="game-info" class="info-box"></div> -->
          <div class="info-box mar-b">
             <div id="category"></div>
          </div>
-         <div class="info-box mar-b">
-            <div id="console"></div>
-         </div>
-         <div class="info-box">
-            <div id="estimate"></div>
+         <div class="flex-row">
+            <div class="info-box mar-r" style="flex: 2">
+               <div id="console"></div>
+            </div>
+            <div class="info-box" style="flex: 1">
+               <div id="estimate"></div>
+            </div>
          </div>
          <!-- Timer -->
          <div id="timer" class="info-box"></div>
