Last minute changes done during the event

--- a/butter-blitz-2022/graphics/Intermission.html
+++ b/butter-blitz-2022/graphics/Intermission.html
@@ -7,9 +7,9 @@
       <link rel="stylesheet" href="css/common.css" />
       <link rel="stylesheet" href="css/intermission.css" />
       <style>
-         body {
+         /* body {
          background: url('img/layouts/BP_Tiled_Background.png') no-repeat;
-         }
+         } */
       </style>
 	  
       <!-- JavaScript -->
